--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -843,6 +843,7 @@ footer #ot-sdk-btn.optanon-show-settings {
   padding: 0;
   line-height: inherit;
   font-size: 1rem;
+  cursor: pointer;
 }
 footer #ot-sdk-btn.ot-sdk-show-settings:hover,
 footer #ot-sdk-btn.optanon-show-settings:hover{
