fixing images and addign new procedure

--- a/website/src/components/lightbox/styles.module.css
+++ b/website/src/components/lightbox/styles.module.css
@@ -5,9 +5,10 @@
 }
 
 :local(.docImage) {
-    filter: drop-shadow(1px 4px 4px #aaaaaa33);
-    display: inline-block;
+    filter: drop-shadow(4px 4px 6px #908f8f33);
+    display: block;
     max-width: 400px;
+    border-top: .25px solid #5f5f5f19;
 }
 
 :local(.collapsed) {
