--- a/website/src/components/lightbox/styles.module.css
+++ b/website/src/components/lightbox/styles.module.css
@@ -4,14 +4,15 @@
     width: 100%;
 }
 
+
 :local(.docImage) {
-    filter: drop-shadow(4px 4px 6px #908f8f33);
+    filter: drop-shadow(1px 4px 10px #aaaaaa33);
+    margin: 10px auto;
     display: block;
     max-width: 400px;
-    border-top: .25px solid #5f5f5f19;
 }
 
 :local(.collapsed) {
-    max-width: 400px !important;
-    display: block;
+    max-width: 300px !important;
+    display: inline-block;
 }
