--- a/website/src/components/lightbox/styles.module.css
+++ b/website/src/components/lightbox/styles.module.css
@@ -6,7 +6,8 @@
 
 :local(.docImage) {
     filter: drop-shadow(4px 4px 6px #aaaaaa33);
-    display: block;
+    display: inline-block;
+    text-align: center;
     max-width: 400px;
     border-top: .25px solid #5f5f5f19;
 }
