--- a/website/src/components/lightbox/styles.module.css
+++ b/website/src/components/lightbox/styles.module.css
@@ -1,15 +1,14 @@
 
 :local(.title) {
     text-align: center;
+    font-size: small;
     width: 100%;
 }
 
 :local(.docImage) {
     filter: drop-shadow(4px 4px 6px #aaaaaa33);
     display: inline-block;
-    text-align: center;
     max-width: 400px;
-    border-top: .25px solid #5f5f5f19;
 }
 
 :local(.collapsed) {
